testdata/manifests/bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
  labels:
    app: web
spec:
  template:
    metadata:
      labels:
        app: web
    spec:
      hostNetwork: true
      containers:
        - name: web
          image: nginx
          securityContext:
            privileged: true
